--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,8 @@ on:
   pull_request:
     types:
       - opened
+      - edited
+      - ready_for_review
     branches:
       - main
   workflow_dispatch:
