--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,5 +21,6 @@ FetchContent_MakeAvailable(json logger)
 include_directories(include)
 
 add_executable(coolstory_gram_client
-            src/main.cpp)
+            src/main.cpp
+			src/websocket_session.cpp)
 target_link_libraries(coolstory_gram_client PRIVATE nlohmann_json::nlohmann_json liblogger boost_coroutine)
